--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+function getCurrentQuarterLabel(date = new Date()) {
+  const year = date.getFullYear();
+  const month = date.getMonth(); // 0 = Jan
+  let quarter;
+  if (month < 3) quarter = 1; // Jan-Mar
+  else if (month < 6) quarter = 2; // Apr-Jun
+  else if (month < 9) quarter = 3; // Jul-Sep
+  else quarter = 4; // Oct-Dec
+  return `FY${year} Q${quarter}`;
+}
+
+
+
 import React from "react";
 import { Box, TextField, MenuItem, CircularProgress } from "@mui/material";
 import Autocomplete from "@mui/material/Autocomplete";
