--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,19 @@
-function getCurrentQuarterLabel(date = new Date()) {
-  const year = date.getFullYear();
-  const month = date.getMonth(); // 0 = Jan
-  let quarter;
-  if (month < 3) quarter = 1; // Jan-Mar
-  else if (month < 6) quarter = 2; // Apr-Jun
-  else if (month < 9) quarter = 3; // Jul-Sep
-  else quarter = 4; // Oct-Dec
-  return `FY${year} Q${quarter}`;
-}
-
-
-
-import React from "react";
-import { Box, TextField, MenuItem, CircularProgress } from "@mui/material";
-import Autocomplete from "@mui/material/Autocomplete";
-
-const ReportFormFilters = ({
-  currentQuarter,
-  vendors,
-  pcmIds,
-  selectedVendor,
-  selectedPCM,
-  onVendorChange,
-  onPCMChange,
-  loadingVendor,
-  loadingPCM,
-}) => (
-  <Box sx={{ display: "flex", gap: 3, mb: 2, flexWrap: "wrap" }}>
-    <TextField
-      label="Report Quarter"
-      value={currentQuarter}
-      InputProps={{ readOnly: true }}
-      sx={{ flex: 1, minWidth: 180 }}
-    />
-    <Autocomplete
-      options={vendors}
-      value={selectedVendor || ""}
-      onChange={(e, newVal) => onVendorChange(newVal)}
-      loading={loadingVendor}
-      sx={{ flex: 1, minWidth: 180 }}
-      renderInput={(params) => (
-        <TextField
-          {...params}
-          label="Vendor"
-          required
-          InputProps={{
-            ...params.InputProps,
-            endAdornment: (
-              <>
-                {loadingVendor ? <CircularProgress color="inherit" size={18} /> : null}
-                {params.InputProps.endAdornment}
-              </>
-            ),
-          }}
-        />
-      )}
-      isOptionEqualToValue={(option, value) => option === value}
-      disabled={loadingVendor}
-    />
-    <TextField
-      select
-      label="PCM ID"
-      value={selectedPCM}
-      onChange={onPCMChange}
-      required
-      sx={{ flex: 1, minWidth: 180 }}
-      disabled={!selectedVendor || loadingPCM}
-      InputProps={{
-        endAdornment: loadingPCM ? <CircularProgress color="inherit" size={18} /> : null,
-      }}
-    >
-      {pcmIds.map((id) => (
-        <MenuItem key={id} value={id}>{id}</MenuItem>
-      ))}
-    </TextField>
-  </Box>
-);
-
-export default ReportFormFilters;
+<configuration>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="React Routes" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/pcportal/client/index.html" />
+        </rule>
+      </rules>
+    </rewrite>
+    <staticContent>
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
+  </system.webServer>
+</configuration>
