--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,11 @@
-        {showTip && (
-          <Alert
-            severity="info"
-            icon={<InfoOutlinedIcon fontSize="small" />}
-            sx={{
-              py: 0.5,
-              px: 1.5,
-              bgcolor: "#e7f3fe",
-              color: "#15395b",
-              fontSize: "0.96rem",
-              alignItems: "center",
-              border: "1px solid #90caf9",
-              borderRadius: 1.5,
-              m: 0,
-              ml: 0.5,
-              display: "flex"
-            }}
-            action={
-              <IconButton
-                size="small"
-                onClick={() => setShowTip(false)}
-                sx={{ color: "#1976d2" }}
-              >
-                <CloseIcon fontSize="small" />
-              </IconButton>
-            }
-          >
+        {!showTip && (
+          <Tooltip title="Show tip">
+            <IconButton
+              size="small"
+              onClick={() => setShowTip(true)}
+              sx={{ color: "#1976d2", ml: 0.5 }}
+            >
+              <InfoOutlinedIcon fontSize="small" />
+            </IconButton>
+          </Tooltip>
+        )}
