--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,44 @@
-        {!showTip && (
-          <Tooltip title="Show tip">
-            <IconButton
-              size="small"
-              onClick={() => setShowTip(true)}
-              sx={{ color: "#1976d2", ml: 0.5 }}
-            >
-              <InfoOutlinedIcon fontSize="small" />
-            </IconButton>
-          </Tooltip>
-        )}
+import React, { useState } from "react";
+import { Alert, IconButton, Tooltip } from "@mui/material";
+import InfoOutlinedIcon from "@mui/icons-material/InfoOutlined";
+import CloseIcon from "@mui/icons-material/Close";
+
+const InlineInfoTip = ({ tip, sx, iconSx, defaultOpen = true }) => {
+  const [show, setShow] = useState(defaultOpen);
+
+  return show ? (
+    <Alert
+      severity="info"
+      icon={<InfoOutlinedIcon fontSize="small" />}
+      sx={{
+        py: 0.5, px: 1.5, bgcolor: "#e7f3fe", color: "#15395b",
+        fontSize: "0.96rem", alignItems: "center",
+        border: "1px solid #90caf9", borderRadius: 1.5,
+        m: 0, ml: 0.5, display: "flex", ...sx
+      }}
+      action={
+        <IconButton
+          size="small"
+          onClick={() => setShow(false)}
+          sx={{ color: "#1976d2", ...iconSx }}
+        >
+          <CloseIcon fontSize="small" />
+        </IconButton>
+      }
+    >
+      {tip}
+    </Alert>
+  ) : (
+    <Tooltip title="Show tip">
+      <IconButton
+        size="small"
+        onClick={() => setShow(true)}
+        sx={{ color: "#1976d2", ml: 0.5, ...iconSx }}
+      >
+        <InfoOutlinedIcon fontSize="small" />
+      </IconButton>
+    </Tooltip>
+  );
+};
+
+export default InlineInfoTip;
