--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,89 @@
+import React from "react";
+import {
+  Box,
+  Typography,
+  Table,
+  TableHead,
+  TableRow,
+  TableCell,
+  TableBody,
+  Paper,
+  IconButton
+} from "@mui/material";
+import EditIcon from "@mui/icons-material/Edit";
+import DeleteIcon from "@mui/icons-material/Delete";
+
+const boldBullet = (text) => {
+  // Matches e.g., "1." or "- " at the start
+  const match = text?.match(/^(\d+\.)\s*/);
+  if (match) {
+    return (
+      <>
+        <b>{match[1]}</b>{text.slice(match[0].length)}
+      </>
+    );
+  }
+  return text;
+};
+
+const RiskAreaTable = ({ riskAreasList, onEdit, onDelete, vendor, pcmid }) => (
+  riskAreasList.length > 0 && (
+    <Box sx={{ mt: 3 }}>
+      <Typography variant="subtitle1" fontWeight={600} gutterBottom>
+        Risk Areas for Vendor: <b>{vendor}</b> | PCM ID: <b>{pcmid}</b>
+      </Typography>
+      <Paper elevation={1}>
+        <Table>
+          <TableHead>
+            <TableRow>
+              <TableCell sx={{ fontWeight: 700, width: "18%" }}>Risk Area</TableCell>
+              <TableCell sx={{ fontWeight: 700, width: "36%" }}>Risk Insight</TableCell>
+              <TableCell sx={{ fontWeight: 700, width: "36%" }}>Risk Mitigation</TableCell>
+              <TableCell sx={{ fontWeight: 700, width: "10%" }} align="center">Actions</TableCell>
+            </TableRow>
+          </TableHead>
+          <TableBody>
+            {riskAreasList.map((entry, idx) => (
+              <TableRow key={idx} hover>
+                <TableCell>
+                  <Typography fontWeight={600}>{entry.riskArea}</Typography>
+                </TableCell>
+                <TableCell>
+                  <Typography variant="body2">
+                    {boldBullet(entry.riskInsight)}
+                  </Typography>
+                </TableCell>
+                <TableCell>
+                  <Box sx={{ pl: 1 }}>
+                    {["A", "B", "C", "D", "E"].map((key) => {
+                      const val = entry.mitigations[key];
+                      if (!val) return null;
+                      // Bold numbered prefix if present (e.g. "1a.")
+                      const match = val.match(/^(\d+[a-eA-E]?\.)\s*/);
+                      return (
+                        <Typography variant="body2" sx={{ mb: 0.5 }} key={key}>
+                          {match ? (
+                            <>
+                              <b>{match[1]}</b>{val.slice(match[0].length)}
+                            </>
+                          ) : val}
+                        </Typography>
+                      );
+                    })}
+                  </Box>
+                </TableCell>
+                <TableCell align="center">
+                  <IconButton onClick={() => onEdit(idx)} size="small"><EditIcon /></IconButton>
+                  <IconButton onClick={() => onDelete(idx)} size="small"><DeleteIcon /></IconButton>
+                </TableCell>
+              </TableRow>
+            ))}
+          </TableBody>
+        </Table>
+      </Paper>
+    </Box>
+  )
+);
+
+export default RiskAreaTable;
 
